# breakout

./: .gitignore  CMakeLists.txt
inc/: EBO.h  VAO.h  VBO.h  ball_object.h  game.h  game_level.h  game_object.h  glad.h  particle_generator.h  resource_manager.h  shader.h  sprite_renderer.h  texture.h
res/: sprite.frag
res/shaders/: particle.frag  particle.vert  sprite.vert
src/: EBO.cpp  VAO.cpp  VBO.cpp  ball_object.cpp  game.cpp  game_level.cpp  game_object.cpp  glad.c  main.cpp  particle_generator.cpp  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  texture.cpp
